--- a/bibliography/bibliography.bib
+++ b/bibliography/bibliography.bib
@@ -3936,6 +3936,7 @@ keywords = "Knowledge representation, Multi-source, Textual information",
 	language = {en},
 	author = {Hilario, Melanie},
 	pages = {6},
+	year= {1995},
 	file = {Hilario - An Overview of Strategies for Neurosymbolic Integr.pdf:/Users/eamador/Zotero/storage/LPCKZ66I/Hilario - An Overview of Strategies for Neurosymbolic Integr.pdf:application/pdf},
 }
 
@@ -3963,6 +3964,27 @@ keywords = "Knowledge representation, Multi-source, Textual information",
 	pages = {460--470},
 }
 
+
+@article{corchado_neuro-symbolic_1995,
+	title = {Neuro-symbolic reasoning system for modelling complex behaviours},
+	abstract = {A neuro-symbolic reasoning strategy for modelling a complex system is presented in which the aim is to forecast, in real time, the physical parameter values of a dynamic environment: the ocean. In situations in which the rules that determine a system are unknown the prediction of the parameter values that determine the characteristic behaviour of the system can be a problematic task. In such a situation it has been found that a case-based reasoning system, in combination with an artifical neural network, can provide a more effective means of performing such predictions than other connectionist or symbolic techniques. The case-based reasoning system incorporates a radial basis function artificial neural network for the case adaptation. The results obtained from experiments, in which the system operated in real time in the oceanographic environment, are presented.},
+	language = {en},
+	author = {Corchado, Juan M and Aiken, Jim and Rees, Nigel},
+	pages = {32},
+	year={1995},
+	file = {Corchado et al. - Neuro-symbolic reasoning system for modelling comp.pdf:/home/eamador/Zotero/storage/IIFY3K9J/Corchado et al. - Neuro-symbolic reasoning system for modelling comp.pdf:application/pdf},
+}
+
+@incollection{medsker2020models,
+  title={Models and guidelines for integrating expert systems and neural networks},
+  author={Medsker, Larry R and Bailey, David L},
+  booktitle={Hybrid architectures for intelligent systems},
+  pages={153--171},
+  year={1992},
+  publisher={CRC Press}
+}
+
+
 @article{ilkou_symbolic_nodate,
 	title = {Symbolic {Vs} {Sub}-symbolic {AI} {Methods}: {Friends} or {Enemies}?},
 	abstract = {There is a long and unresolved debate between the symbolic and sub-symbolic methods. However, in recent years, there is a push towards in-between methods. In this work, we provide a comprehensive overview of the symbolic, sub-symbolic and in-between approaches focused in the domain of knowledge graphs, namely, schema representation, schema matching, knowledge graph completion, link prediction, entity resolution, entity classification and triple classification. We critically present key characteristics, advantages and disadvantages of the main algorithms in each domain, and review the use of these methods in knowledge graph related applications.},
@@ -3985,15 +4007,6 @@ keywords = "Knowledge representation, Multi-source, Textual information",
 	note = {arXiv: 1905.06088},
 	keywords = {Computer Science - Artificial Intelligence},
 	file = {arXiv Fulltext PDF:/Users/eamador/Zotero/storage/PC7ELRG3/Garcez et al. - 2019 - Neural-Symbolic Computing An Effective Methodolog.pdf:application/pdf;arXiv.org Snapshot:/Users/eamador/Zotero/storage/ZGXW26FW/1905.html:text/html},
-}
-
-@article{mcgarry_hybrid_nodate,
-	title = {Hybrid {Neural} {Systems}: {From} {Simple} {Coupling} to {Fully} {Integrated} {Neural} {Networks}},
-	abstract = {This paper describes techniques for integrating neural networks and symbolic components into powerful hybrid systems. Neural networks have unique processing characteristics that enable tasks to be performed that would be di cult or intractable for a symbolic rule-based system. However, a stand-alone neural network requires an interpretation either by a human or a rulebased system. This motivates the integration of neural/symbolic techniques within a hybrid system. A number of integration possibilities exist: some systems consist of neural network components performing symbolic tasks while other systems are composed of several neural networks and symbolic components, each component acting as a self-contained module communicating with the others. Other hybrid systems are able to transform subsymbolic representations into symbolic ones and vice-versa. This paper provides an overview and evaluation of the state of the art of several hybrid neural systems for rule-based processing.},
-	language = {en},
-	author = {McGarry, Kenneth and Wermter, Stefan and MacIntyre, John},
-	pages = {32},
-	file = {McGarry et al. - Hybrid Neural Systems From Simple Coupling to Ful.pdf:/Users/eamador/Zotero/storage/KQEETBDL/McGarry et al. - Hybrid Neural Systems From Simple Coupling to Ful.pdf:application/pdf},
 }
 
 @article{bader_dimensions_2005,
@@ -4036,6 +4049,21 @@ keywords = "Knowledge representation, Multi-source, Textual information",
 	year = {2005},
 	pages = {1223--1263},
 	file = {Jacobsson - 2005 - Rule Extraction from Recurrent Neural Networks AT.pdf:/Users/eamador/Zotero/storage/S3A3MJGM/Jacobsson - 2005 - Rule Extraction from Recurrent Neural Networks AT.pdf:application/pdf},
+}
+
+
+@Article{amador_systematic_review_2019,
+AUTHOR = {Amador-Domínguez, Elvira and Serrano, Emilio and Manrique, Daniel and De Paz, Juan F.},
+TITLE = {Prediction and Decision-Making in Intelligent Environments Supported by Knowledge Graphs, A Systematic Review},
+JOURNAL = {Sensors},
+VOLUME = {19},
+YEAR = {2019},
+NUMBER = {8},
+ARTICLE-NUMBER = {1774},
+URL = {https://www.mdpi.com/1424-8220/19/8/1774},
+ISSN = {1424-8220},
+ABSTRACT = {Ambient Intelligence is currently a lively application domain of Artificial Intelligence and has become the central subject of multiple initiatives worldwide. Several approaches inside this domain make use of knowledge bases or knowledge graphs, both previously existing and ad hoc. This form of representation allows heterogeneous data gathered from diverse sources to be contextualized and combined to create relevant information for intelligent systems, usually following higher level constraints defined by an ontology. In this work, we conduct a systematic review of the existing usages of knowledge bases in intelligent environments, as well as an in-depth study of the predictive and decision-making models employed. Finally, we present a use case for smart homes and illustrate the use and advantages of Knowledge Graph Embeddings in this context.},
+DOI = {10.3390/s19081774}
 }
 
 @article{marra_learning_2021,
@@ -4205,4 +4233,334 @@ url = {https://www.sciencedirect.com/science/article/pii/B9780444506801500723},
 author = {B. Galvan and Greiner D. and Périaux J. and M. Sefrioui and G. Winter},
 keywords = {Evolutionary Algorithms, Nozzle flows, Aerodynamic Shape Design Optimisation, Hierarchical Parallel Evolutionary Algorithms, Multi objective, Game Theory, Pareto Front and Nash Equilbrium},
 abstract = {This paper attempts to present a summarized survey in the field of Parallel Evolutionary Algorithms (PEAs), trying to highlight the most relevent aspects in the design and implementation of each class of PEAs. A review of the most advanced research activities on this field is presented. New tools for new challenges of Industry and Society, which are definitely multi criteria oriented and CFD dominant in the applications, are investigated and a series of simple nozzle shape optimization problems with their methodologies and associated results – including Hierarchy and Game Theory - are discussed. Data resulting from evolutionary optimization, which have been collected in the database of a European Thematic Network named INGEnet are presented as a road map to Multidisciplinary Design Optimisation.}
+}
+
+@article{bengio_2012_dl_review,
+  author    = {Yoshua Bengio and
+               Aaron C. Courville and
+               Pascal Vincent},
+  title     = {Unsupervised Feature Learning and Deep Learning: {A} Review and New
+               Perspectives},
+  journal   = {CoRR},
+  volume    = {abs/1206.5538},
+  year      = {2012},
+  url       = {http://arxiv.org/abs/1206.5538},
+  eprinttype = {arXiv},
+  eprint    = {1206.5538},
+  timestamp = {Mon, 13 Aug 2018 16:47:42 +0200},
+  biburl    = {https://dblp.org/rec/journals/corr/abs-1206-5538.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+
+@ARTICLE{Rosenblatt58theperceptron:,
+    author = {F. Rosenblatt},
+    title = {The Perceptron: A Probabilistic Model for Information Storage and Organization in The Brain},
+    journal = {Psychological Review},
+    year = {1958},
+    pages = {65--386}
+}
+
+@INBOOK{rumelhart_1987_backpropagation,  author={Rumelhart, David E. and McClelland, James L.},  booktitle={Parallel Distributed Processing: Explorations in the Microstructure of Cognition: Foundations},   title={Learning Internal Representations by Error Propagation},   year={1987},  volume={},  number={},  pages={318-362},  doi={}}
+
+@inproceedings{alexnet,
+ author = {Krizhevsky, Alex and Sutskever, Ilya and Hinton, Geoffrey E},
+ booktitle = {Advances in Neural Information Processing Systems},
+ editor = {F. Pereira and C. J. C. Burges and L. Bottou and K. Q. Weinberger},
+ pages = {},
+ publisher = {Curran Associates, Inc.},
+ title = {ImageNet Classification with Deep Convolutional Neural Networks},
+ url = {https://proceedings.neurips.cc/paper/2012/file/c399862d3b9d6b76c8436e924a68c45b-Paper.pdf},
+ volume = {25},
+ year = {2012}
+}
+
+@article{chowdhury_2003_nlp,
+author = {Chowdhury, Gobinda G.},
+title = {Natural language processing},
+journal = {Annual Review of Information Science and Technology},
+volume = {37},
+number = {1},
+pages = {51-89},
+doi = {https://doi.org/10.1002/aris.1440370103},
+url = {https://asistdl.onlinelibrary.wiley.com/doi/abs/10.1002/aris.1440370103},
+eprint = {https://asistdl.onlinelibrary.wiley.com/doi/pdf/10.1002/aris.1440370103},
+year = {2003}
+}
+
+@inproceedings{devlin-etal-2019-bert,
+    title = "{BERT}: Pre-training of Deep Bidirectional Transformers for Language Understanding",
+    author = "Devlin, Jacob  and
+      Chang, Ming-Wei  and
+      Lee, Kenton  and
+      Toutanova, Kristina",
+    booktitle = "Proceedings of the 2019 Conference of the North {A}merican Chapter of the Association for Computational Linguistics: Human Language Technologies, Volume 1 (Long and Short Papers)",
+    month = jun,
+    year = "2019",
+    address = "Minneapolis, Minnesota",
+    publisher = "Association for Computational Linguistics",
+    url = "https://aclanthology.org/N19-1423",
+    doi = "10.18653/v1/N19-1423",
+    pages = "4171--4186",
+    abstract = "We introduce a new language representation model called BERT, which stands for Bidirectional Encoder Representations from Transformers. Unlike recent language representation models (Peters et al., 2018a; Radford et al., 2018), BERT is designed to pre-train deep bidirectional representations from unlabeled text by jointly conditioning on both left and right context in all layers. As a result, the pre-trained BERT model can be fine-tuned with just one additional output layer to create state-of-the-art models for a wide range of tasks, such as question answering and language inference, without substantial task-specific architecture modifications. BERT is conceptually simple and empirically powerful. It obtains new state-of-the-art results on eleven natural language processing tasks, including pushing the GLUE score to 80.5 (7.7 point absolute improvement), MultiNLI accuracy to 86.7{\%} (4.6{\%} absolute improvement), SQuAD v1.1 question answering Test F1 to 93.2 (1.5 point absolute improvement) and SQuAD v2.0 Test F1 to 83.1 (5.1 point absolute improvement).",
+}
+
+@inproceedings{peters-etal-2018-deep,
+    title = "Deep Contextualized Word Representations",
+    author = "Peters, Matthew E.  and
+      Neumann, Mark  and
+      Iyyer, Mohit  and
+      Gardner, Matt  and
+      Clark, Christopher  and
+      Lee, Kenton  and
+      Zettlemoyer, Luke",
+    booktitle = "Proceedings of the 2018 Conference of the North {A}merican Chapter of the Association for Computational Linguistics: Human Language Technologies, Volume 1 (Long Papers)",
+    month = jun,
+    year = "2018",
+    address = "New Orleans, Louisiana",
+    publisher = "Association for Computational Linguistics",
+    url = "https://aclanthology.org/N18-1202",
+    doi = "10.18653/v1/N18-1202",
+    pages = "2227--2237",
+    abstract = "We introduce a new type of deep contextualized word representation that models both (1) complex characteristics of word use (e.g., syntax and semantics), and (2) how these uses vary across linguistic contexts (i.e., to model polysemy). Our word vectors are learned functions of the internal states of a deep bidirectional language model (biLM), which is pre-trained on a large text corpus. We show that these representations can be easily added to existing models and significantly improve the state of the art across six challenging NLP problems, including question answering, textual entailment and sentiment analysis. We also present an analysis showing that exposing the deep internals of the pre-trained network is crucial, allowing downstream models to mix different types of semi-supervision signals.",
+}
+
+
+@inproceedings{wang-etal-2016-combination,
+    title = "Combination of Convolutional and Recurrent Neural Network for Sentiment Analysis of Short Texts",
+    author = "Wang, Xingyou  and
+      Jiang, Weijie  and
+      Luo, Zhiyong",
+    booktitle = "Proceedings of {COLING} 2016, the 26th International Conference on Computational Linguistics: Technical Papers",
+    month = dec,
+    year = "2016",
+    address = "Osaka, Japan",
+    publisher = "The COLING 2016 Organizing Committee",
+    url = "https://aclanthology.org/C16-1229",
+    pages = "2428--2437",
+    abstract = "Sentiment analysis of short texts is challenging because of the limited contextual information they usually contain. In recent years, deep learning models such as convolutional neural networks (CNNs) and recurrent neural networks (RNNs) have been applied to text sentiment analysis with comparatively remarkable results. In this paper, we describe a jointed CNN and RNN architecture, taking advantage of the coarse-grained local features generated by CNN and long-distance dependencies learned via RNN for sentiment analysis of short texts. Experimental results show an obvious improvement upon the state-of-the-art on three benchmark corpora, MR, SST1 and SST2, with 82.28{\%}, 51.50{\%} and 89.95{\%} accuracy, respectively.",
+}
+
+
+@article{dai_survey_2020,
+	title = {A {Survey} on {Knowledge} {Graph} {Embedding}: {Approaches}, {Applications} and {Benchmarks}},
+	volume = {9},
+	copyright = {http://creativecommons.org/licenses/by/3.0/},
+	shorttitle = {A {Survey} on {Knowledge} {Graph} {Embedding}},
+	url = {https://www.mdpi.com/2079-9292/9/5/750},
+	doi = {10.3390/electronics9050750},
+	abstract = {A knowledge graph (KG), also known as a knowledge base, is a particular kind of network structure in which the node indicates entity and the edge represent relation. However, with the explosion of network volume, the problem of data sparsity that causes large-scale KG systems to calculate and manage difficultly has become more significant. For alleviating the issue, knowledge graph embedding is proposed to embed entities and relations in a KG to a low-, dense and continuous feature space, and endow the yield model with abilities of knowledge inference and fusion. In recent years, many researchers have poured much attention in this approach, and we will systematically introduce the existing state-of-the-art approaches and a variety of applications that benefit from these methods in this paper. In addition, we discuss future prospects for the development of techniques and application trends. Specifically, we first introduce the embedding models that only leverage the information of observed triplets in the KG. We illustrate the overall framework and specific idea and compare the advantages and disadvantages of such approaches. Next, we introduce the advanced models that utilize additional semantic information to improve the performance of the original methods. We divide the additional information into two categories, including textual descriptions and relation paths. The extension approaches in each category are described, following the same classification criteria as those defined for the triplet fact-based models. We then describe two experiments for comparing the performance of listed methods and mention some broader domain tasks such as question answering, recommender systems, and so forth. Finally, we collect several hurdles that need to be overcome and provide a few future research directions for knowledge graph embedding.},
+	language = {en},
+	number = {5},
+	urldate = {2021-03-10},
+	journal = {Electronics},
+	author = {Dai, Yuanfei and Wang, Shiping and Xiong, Neal N. and Guo, Wenzhong},
+	month = may,
+	year = {2020},
+	note = {Number: 5
+Publisher: Multidisciplinary Digital Publishing Institute},
+	keywords = {knowledge graph embedding, deep learning, knowledge representation, statistical relational learning},
+	pages = {750},
+	file = {Full Text PDF:/home/eamador/Zotero/storage/CKKYDLJT/Dai et al. - 2020 - A Survey on Knowledge Graph Embedding Approaches,.pdf:application/pdf},
+}
+
+%--------------HYBRID MODELS
+
+@article{harmelen_boxology_2019,
+	title = {A {Boxology} of {Design} {Patterns} {forHybrid} {Learningand} {Reasoning} {Systems}},
+	volume = {18},
+	issn = {1540-9589},
+	url = {http://www.riverpublishers.com/journal_read_html_article.php?j=JWE/18/1/3},
+	doi = {10.13052/jwe1540-9589.18133},
+	abstract = {We propose a set of compositional design patterns to describe a large variety of systems that combine statistical techniques from machine learning with symbolic techniques from knowledge representation. As in other areas of computer science (knowledge engineering, software engineering, ontology engineering, process mining and others), such design patterns help to systematize the literature, clarify which combinations of techniques serve which purposes, and encourage re-use of software components. We have validated our set of compositional design patterns against a large body of recent literature.},
+	language = {en},
+	number = {1},
+	urldate = {2021-06-25},
+	journal = {Journal of Web Engineering},
+	author = {Harmelen, Frank van and {Department of Computer Science, Vrije Universiteit Amsterdam, Netherlands} and Teije, Annette ten and {Department of Computer Science, Vrije Universiteit Amsterdam, Netherlands}},
+	year = {2019},
+	note = {Number: 1},
+	pages = {97--124},
+	file = {Harmelen et al. - 2019 - A Boxology of Design Patterns forHybrid Learningan.pdf:/home/eamador/Zotero/storage/STUEPIRF/Harmelen et al. - 2019 - A Boxology of Design Patterns forHybrid Learningan.pdf:application/pdf},
+}
+
+@article{marcus_deep_2018,
+	title = {Deep {Learning}: {A} {Critical} {Appraisal}},
+	shorttitle = {Deep {Learning}},
+	url = {http://arxiv.org/abs/1801.00631},
+	abstract = {Although deep learning has historical roots going back decades, neither the term "deep learning" nor the approach was popular just over five years ago, when the field was reignited by papers such as Krizhevsky, Sutskever and Hinton's now classic (2012) deep network model of Imagenet. What has the field discovered in the five subsequent years? Against a background of considerable progress in areas such as speech recognition, image recognition, and game playing, and considerable enthusiasm in the popular press, I present ten concerns for deep learning, and suggest that deep learning must be supplemented by other techniques if we are to reach artificial general intelligence.},
+	urldate = {2021-12-15},
+	journal = {arXiv:1801.00631 [cs, stat]},
+	author = {Marcus, Gary},
+	month = jan,
+	year = {2018},
+	note = {arXiv: 1801.00631},
+	keywords = {Computer Science - Artificial Intelligence, Computer Science - Machine Learning, Statistics - Machine Learning, I.2.6, 97R40, I.2.0},
+	file = {arXiv Fulltext PDF:/home/eamador/Zotero/storage/A3KCBL3M/Marcus - 2018 - Deep Learning A Critical Appraisal.pdf:application/pdf;arXiv.org Snapshot:/home/eamador/Zotero/storage/WNR3H9GS/1801.html:text/html},
+}
+
+@article{van_bekkum_modular_2021,
+	title = {Modular design patterns for hybrid learning and reasoning systems: a taxonomy, patterns and use cases},
+	volume = {51},
+	issn = {0924-669X},
+	shorttitle = {Modular design patterns for hybrid learning and reasoning systems},
+	doi = {10.1007/s10489-021-02394-3},
+	abstract = {The unification of statistical (data-driven) and symbolic (knowledge-driven) methods is widely recognized as one of the key challenges of modern AI. Recent years have seen a large number of publications on such hybrid neuro-symbolic AI systems. That rapidly growing literature is highly diverse, mostly empirical, and is lacking a unifying view of the large variety of these hybrid systems. In this paper, we analyze a large body of recent literature and we propose a set of modular design patterns for such hybrid, neuro-symbolic systems. We are able to describe the architecture of a very large number of hybrid systems by composing only a small set of elementary patterns as building blocks. The main contributions of this paper are: 1) a taxonomically organised vocabulary to describe both processes and data structures used in hybrid systems; 2) a set of 15+ design patterns for hybrid AI systems organized in a set of elementary patterns and a set of compositional patterns; 3) an application of these design patterns in two realistic use-cases for hybrid AI systems. Our patterns reveal similarities between systems that were not recognized until now. Finally, our design patterns extend and refine Kautz’s earlier attempt at categorizing neuro-symbolic architectures. © 2021, The Author(s).},
+	language = {English},
+	number = {9},
+	journal = {Applied Intelligence},
+	author = {van Bekkum, M. and de Boer, M. and van Harmelen, F. and Meyer-Vitali, A. and Teije, A.},
+	year = {2021},
+	note = {Number: 9},
+	keywords = {Design patterns, Neuro-symbolic systems},
+	pages = {6528--6546},
+}
+
+@article{calegari_integration_nodate,
+	title = {On the integration of symbolic and sub-symbolic techniques for {XAI}: {A} survey},
+	abstract = {The more intelligent systems based on sub-symbolic techniques pervade our everyday lives, the less human can understand them. This is why symbolic approaches are getting more and more attention in the general effort to make AI interpretable, explainable, and trustable. Understanding the current state of the art of AI techniques integrating symbolic and sub-symbolic approaches is then of paramount importance, nowadays—in particular in the XAI perspective. This is why this paper provides an overview of the main symbolic/sub-symbolic integration techniques, focussing in particular on those targeting explainable AI systems.},
+	language = {en},
+	author = {Calegari, Roberta and Ciatto, Giovanni and Omicini, Andrea},
+	pages = {26},
+	file = {Calegari et al. - On the integration of symbolic and sub-symbolic te.pdf:/home/eamador/Zotero/storage/23FE66JV/Calegari et al. - On the integration of symbolic and sub-symbolic te.pdf:application/pdf},
+}
+
+@article{hilario_overview_nodate,
+	title = {An {Overview} of {Strategies} for {Neurosymbolic} {Integration}},
+	abstract = {At the crossroads of symbolic and neural processing, researchers have been actively investigating the synergies that might be obtained from combining the strengths of these two paradigms. Neurosymbolic integration comes in two avors: unifed and hybrid. Uni ed approaches strive to attain full symbol-processing functionalities using neural techniques alone while hybrid approaches blend symbolic reasoning and representational models with neural networks. This papers attempts to clarify and compare the objectives, mechanisms, variants and underlying assumptions of these major integration approaches.},
+	language = {en},
+	author = {Hilario, Melanie},
+	pages = {6},
+	file = {Hilario - An Overview of Strategies for Neurosymbolic Integr.pdf:/home/eamador/Zotero/storage/VX43NTCD/Hilario - An Overview of Strategies for Neurosymbolic Integr.pdf:application/pdf},
+}
+
+@article{garcez_neural-symbolic_2019,
+	title = {Neural-{Symbolic} {Computing}: {An} {Effective} {Methodology} for {Principled} {Integration} of {Machine} {Learning} and {Reasoning}},
+	shorttitle = {Neural-{Symbolic} {Computing}},
+	url = {http://arxiv.org/abs/1905.06088},
+	abstract = {Current advances in Artificial Intelligence and machine learning in general, and deep learning in particular have reached unprecedented impact not only across research communities, but also over popular media channels. However, concerns about interpretability and accountability of AI have been raised by influential thinkers. In spite of the recent impact of AI, several works have identified the need for principled knowledge representation and reasoning mechanisms integrated with deep learning-based systems to provide sound and explainable models for such systems. Neural-symbolic computing aims at integrating, as foreseen by Valiant, two most fundamental cognitive abilities: the ability to learn from the environment, and the ability to reason from what has been learned. Neural-symbolic computing has been an active topic of research for many years, reconciling the advantages of robust learning in neural networks and reasoning and interpretability of symbolic representation. In this paper, we survey recent accomplishments of neural-symbolic computing as a principled methodology for integrated machine learning and reasoning. We illustrate the effectiveness of the approach by outlining the main characteristics of the methodology: principled integration of neural learning with symbolic knowledge representation and reasoning allowing for the construction of explainable AI systems. The insights provided by neural-symbolic computing shed new light on the increasingly prominent need for interpretable and accountable AI systems.},
+	urldate = {2021-12-27},
+	journal = {arXiv:1905.06088 [cs]},
+	author = {Garcez, Artur d'Avila and Gori, Marco and Lamb, Luis C. and Serafini, Luciano and Spranger, Michael and Tran, Son N.},
+	month = may,
+	year = {2019},
+	note = {arXiv: 1905.06088},
+	keywords = {Computer Science - Artificial Intelligence},
+	file = {arXiv Fulltext PDF:/home/eamador/Zotero/storage/2KFMQCUB/Garcez et al. - 2019 - Neural-Symbolic Computing An Effective Methodolog.pdf:application/pdf;arXiv.org Snapshot:/home/eamador/Zotero/storage/FZ3RSENL/1905.html:text/html},
+}
+
+@article{mcgarry_hybrid_1999,
+	title = {Hybrid {Neural} {Systems}: {From} {Simple} {Coupling} to {Fully} {Integrated} {Neural} {Networks}},
+	abstract = {This paper describes techniques for integrating neural networks and symbolic components into powerful hybrid systems. Neural networks have unique processing characteristics that enable tasks to be performed that would be di cult or intractable for a symbolic rule-based system. However, a stand-alone neural network requires an interpretation either by a human or a rulebased system. This motivates the integration of neural/symbolic techniques within a hybrid system. A number of integration possibilities exist: some systems consist of neural network components performing symbolic tasks while other systems are composed of several neural networks and symbolic components, each component acting as a self-contained module communicating with the others. Other hybrid systems are able to transform subsymbolic representations into symbolic ones and vice-versa. This paper provides an overview and evaluation of the state of the art of several hybrid neural systems for rule-based processing.},
+	language = {en},
+	year = {1999},
+	author = {McGarry, Kenneth and Wermter, Stefan and MacIntyre, John},
+	pages = {32},
+	file = {McGarry et al. - Hybrid Neural Systems From Simple Coupling to Ful.pdf:/home/eamador/Zotero/storage/9FMS69I9/McGarry et al. - Hybrid Neural Systems From Simple Coupling to Ful.pdf:application/pdf},
+}
+
+@ARTICLE{wang_kge_survey_2017,  author={Wang, Quan and Mao, Zhendong and Wang, Bin and Guo, Li},  journal={IEEE Transactions on Knowledge and Data Engineering},   title={Knowledge Graph Embedding: A Survey of Approaches and Applications},   year={2017},  volume={29},  number={12},  pages={2724-2743},  doi={10.1109/TKDE.2017.2754499}}
+
+@article{garcez_neurosymbolic_2020,
+	title = {Neurosymbolic {AI}: {The} 3rd {Wave}},
+	shorttitle = {Neurosymbolic {AI}},
+	url = {http://arxiv.org/abs/2012.05876},
+	abstract = {Current advances in Artificial Intelligence (AI) and Machine Learning (ML) have achieved unprecedented impact across research communities and industry. Nevertheless, concerns about trust, safety, interpretability and accountability of AI were raised by influential thinkers. Many have identified the need for well-founded knowledge representation and reasoning to be integrated with deep learning and for sound explainability. Neural-symbolic computing has been an active area of research for many years seeking to bring together robust learning in neural networks with reasoning and explainability via symbolic representations for network models. In this paper, we relate recent and early research results in neurosymbolic AI with the objective of identifying the key ingredients of the next wave of AI systems. We focus on research that integrates in a principled way neural network-based learning with symbolic knowledge representation and logical reasoning. The insights provided by 20 years of neural-symbolic computing are shown to shed new light onto the increasingly prominent role of trust, safety, interpretability and accountability of AI. We also identify promising directions and challenges for the next decade of AI research from the perspective of neural-symbolic systems.},
+	urldate = {2022-01-20},
+	journal = {arXiv:2012.05876 [cs]},
+	author = {Garcez, Artur d'Avila and Lamb, Luis C.},
+	month = dec,
+	year = {2020},
+	note = {arXiv: 2012.05876},
+	keywords = {Computer Science - Artificial Intelligence, Computer Science - Machine Learning, I.2.4, I.2.6},
+	file = {arXiv Fulltext PDF:/home/eamador/Zotero/storage/P9AYBH5H/Garcez and Lamb - 2020 - Neurosymbolic AI The 3rd Wave.pdf:application/pdf;arXiv.org Snapshot:/home/eamador/Zotero/storage/C3TVANUC/2012.html:text/html},
+}
+
+@article{nickel_review_ml_kg_2016,
+   title={A Review of Relational Machine Learning for Knowledge Graphs},
+   volume={104},
+   ISSN={1558-2256},
+   url={http://dx.doi.org/10.1109/JPROC.2015.2483592},
+   DOI={10.1109/jproc.2015.2483592},
+   number={1},
+   journal={Proceedings of the IEEE},
+   publisher={Institute of Electrical and Electronics Engineers (IEEE)},
+   author={Nickel, Maximilian and Murphy, Kevin and Tresp, Volker and Gabrilovich, Evgeniy},
+   year={2016},
+   month={Jan},
+   pages={11–33} }
+
+
+@inproceedings{leake_bringing_2020,
+	address = {Cham},
+	series = {Lecture {Notes} in {Computer} {Science}},
+	title = {On {Bringing} {Case}-{Based} {Reasoning} {Methodology} to {Deep} {Learning}},
+	isbn = {978-3-030-58342-2},
+	doi = {10.1007/978-3-030-58342-2_22},
+	abstract = {The case-based reasoning community is successfully pursuing multiple approaches for applying deep learning methods to advance case-based reasoning. This “Challenges and Promises” paper argues for a complementary endeavor: pursuing ways that the case-based reasoning methodology can advance deep learning. Starting from challenges in deep learning and proposed neural-symbolic integrations based on specific technologies, it proposes studying how CBR ideas can inform choices of components for a new reasoning pipeline.},
+	language = {en},
+	booktitle = {Case-{Based} {Reasoning} {Research} and {Development}},
+	publisher = {Springer International Publishing},
+	author = {Leake, David and Crandall, David},
+	editor = {Watson, Ian and Weber, Rosina},
+	year = {2020},
+	keywords = {Deep learning, Automated machine learning, Case-based reasoning methodology, Challenge problems, Integrations, Pipelines},
+	pages = {343--348},
+	file = {Springer Full Text PDF:/home/eamador/Zotero/storage/SX3U68DR/Leake and Crandall - 2020 - On Bringing Case-Based Reasoning Methodology to De.pdf:application/pdf},
+}
+
+@inproceedings{daniele_knowledge_2019,
+	address = {Cham},
+	series = {Lecture {Notes} in {Computer} {Science}},
+	title = {Knowledge {Enhanced} {Neural} {Networks}},
+	isbn = {978-3-030-29908-8},
+	doi = {10.1007/978-3-030-29908-8_43},
+	abstract = {We propose Knowledge Enhanced Neural Networks (KENN), an architecture for injecting prior knowledge, codified by a set of logical clauses, into a neural network.In KENN clauses are directly incorporated in the structure of the neural network as a new layer that includes a set of additional learnable parameters, called clause weights. As a consequence, KENN can learn the level of satisfiability to impose in the final classification. When training data contradicts a constraint, KENN learns to ignore it, making the system robust to the presence of wrong knowledge. Moreover, the method returns learned clause weights, which gives us informations about the influence of each constraint in the final predictions, increasing the interpretability of the model. We evaluated KENN on two standard datasets for multi-label classification, showing that the injection of clauses automatically extracted from the training data sensibly improves the performances. Furthermore, we apply KENN to solve the problem of finding relationship between detected objects in images by adopting manually curated clauses. The evaluation shows that KENN outperforms the state of the art methods on this task.},
+	language = {en},
+	booktitle = {{PRICAI} 2019: {Trends} in {Artificial} {Intelligence}},
+	publisher = {Springer International Publishing},
+	author = {Daniele, Alessandro and Serafini, Luciano},
+	editor = {Nayak, Abhaya C. and Sharma, Alok},
+	year = {2019},
+	keywords = {Fuzzy logic, Neural networks, Neural-symbolic integration, Visual Relationship Detection},
+	pages = {542--554},
+	file = {Springer Full Text PDF:/home/eamador/Zotero/storage/KRNFFFFC/Daniele and Serafini - 2019 - Knowledge Enhanced Neural Networks.pdf:application/pdf},
+}
+
+@article{hitzler_neural-symbolic_nodate,
+	title = {Neural-{Symbolic} {Integration} and the {Semantic} {Web}},
+	abstract = {Symbolic Systems in Artiﬁcial Intelligence which are based on formal logic and deductive reasoning are fundamentally diﬀerent from Artiﬁcial Intelligence systems based on artiﬁcial neural networks, such as deep learning approaches. The diﬀerence is not only in their inner workings and general approach, but also with respect to capabilities. Neural-symbolic Integration, as a ﬁeld of study, aims to bridge between the two paradigms. In this paper, we will discuss neural-symbolic integration in its relation to the Semantic Web ﬁeld, with a focus on promises and possible beneﬁts for both, and report on some current research on the topic.},
+	language = {en},
+	author = {Hitzler, Pascal and Bianchi, Federico and Ebrahimi, Monireh and Sarker, Kamruzzaman},
+	pages = {10},
+}
+
+@article{besold_neural-symbolic_2017,
+	title = {Neural-{Symbolic} {Learning} and {Reasoning}: {A} {Survey} and {Interpretation}},
+	shorttitle = {Neural-{Symbolic} {Learning} and {Reasoning}},
+	url = {http://arxiv.org/abs/1711.03902},
+	abstract = {The study and understanding of human behaviour is relevant to computer science, artificial intelligence, neural computation, cognitive science, philosophy, psychology, and several other areas. Presupposing cognition as basis of behaviour, among the most prominent tools in the modelling of behaviour are computational-logic systems, connectionist models of cognition, and models of uncertainty. Recent studies in cognitive science, artificial intelligence, and psychology have produced a number of cognitive models of reasoning, learning, and language that are underpinned by computation. In addition, efforts in computer science research have led to the development of cognitive computational systems integrating machine learning and automated reasoning. Such systems have shown promise in a range of applications, including computational biology, fault diagnosis, training and assessment in simulators, and software verification. This joint survey reviews the personal ideas and views of several researchers on neural-symbolic learning and reasoning. The article is organised in three parts: Firstly, we frame the scope and goals of neural-symbolic computation and have a look at the theoretical foundations. We then proceed to describe the realisations of neural-symbolic computation, systems, and applications. Finally we present the challenges facing the area and avenues for further research.},
+	urldate = {2022-01-14},
+	journal = {arXiv:1711.03902 [cs]},
+	author = {Besold, Tarek R. and Garcez, Artur d'Avila and Bader, Sebastian and Bowman, Howard and Domingos, Pedro and Hitzler, Pascal and Kuehnberger, Kai-Uwe and Lamb, Luis C. and Lowd, Daniel and Lima, Priscila Machado Vieira and de Penning, Leo and Pinkas, Gadi and Poon, Hoifung and Zaverucha, Gerson},
+	month = nov,
+	year = {2017},
+	note = {arXiv: 1711.03902},
+	keywords = {Computer Science - Artificial Intelligence},
+	file = {arXiv Fulltext PDF:/home/eamador/Zotero/storage/V4ZTVJXS/Besold et al. - 2017 - Neural-Symbolic Learning and Reasoning A Survey a.pdf:application/pdf;arXiv.org Snapshot:/home/eamador/Zotero/storage/BSZIUHDB/1711.html:text/html},
+}
+
+@article{valiant_three_2003,
+	title = {Three problems in computer science},
+	volume = {50},
+	issn = {0004-5411},
+	url = {https://doi.org/10.1145/602382.602410},
+	doi = {10.1145/602382.602410},
+	number = {1},
+	urldate = {2022-01-17},
+	journal = {Journal of the ACM},
+	author = {Valiant, Leslie G.},
+	year = {2003},
+	pages = {96--99},
+	file = {Full Text PDF:/home/eamador/Zotero/storage/HN548ZPL/Valiant - 2003 - Three problems in computer science.pdf:application/pdf},
 }
