--- a/0_frontmatter/acknowledgement.tex
+++ b/0_frontmatter/acknowledgement.tex
@@ -4,9 +4,24 @@
 \begin{acknowledgementslong} %uncommenting this line, gives a different acknowledgements heading
 %\begin{acknowledgements}      %this creates the heading for the acknowlegments
 
+%%
+%%HAY QUE AGRADECER A LA UPM POR LA BECA Y AL GRUPO DE FRANK, SOBRETODO A PETER
+%%A SARA Y A LA GENTE DE ÁMSTERDAM
+%A Sara, gracias por tu generosidad, por haber sido 'casa' lejos de casa, por tu compañía y por ser la maravillosa persona que eres. 
 
 
 
+%Me gustaría añadir los versos de la canción de Xoel López "Lodo", porque la he escuchado durante el proceso de escritura bastante y es como un buen recordatorio de que esto es el final del camino y de que es una etapa que abre las puertas de algo nuevo y bonito
+% 
+% \begin{flushright}
+% \textit{"Y quizá hayas andado el camino ya \newline
+% Cuando mires atrás \newline
+% Si estás atrapado en las sombras \newline
+% Aguarda, aguarda \newline
+% Del lodo crecen las flores \newline
+% Más altas, más altas." \newline
+% -Xoel López}
+% \end{flushright}
 \end{acknowledgementslong}
 
 % ------------------------------------------------------------------------
